# SimpleQrCode

./: Archive.h  CMakeLists.txt  README.md  SCANNER_H  Scanner.h  UI.h  vcpkg.json
libs/Archive/: Archive.cpp  Archive.h  CMakeLists.txt
libs/FrameHandler/: CMakeLists.txt  FrameHandler.cpp  FrameHandler.h
libs/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h
libs/UI/: CMakeLists.txt  UI.cpp  UI.h
src/: main.cpp
